--- a/public/css/Promo/nav.css
+++ b/public/css/Promo/nav.css
@@ -40,6 +40,7 @@ padding: 30px;
   top: 30px;
 }
 .Nav--list a {
+  color: white;
   border-bottom: 5.4px solid grey;
   padding-bottom: 6px;
   transition: all ease-out .3s;
