--- a/public/css/Promo/nav.css
+++ b/public/css/Promo/nav.css
@@ -38,6 +38,7 @@ padding: 30px;
   border-bottom-right-radius: 0px;
   position: relative;
   top: 30px;
+  width: 480px;
 }
 .Nav--list a {
   color: white;
