--- a/public/css/Promo/ep.css
+++ b/public/css/Promo/ep.css
@@ -7,7 +7,7 @@
   min-height: 100px;
 }
 .Ep--name {
-  background: #BDBDBD;
+  background: rgba(216,216,216, .6);
   min-width: 483px;
   height: 100%;
   display: flex;
@@ -15,6 +15,7 @@
   align-items: center;
   justify-content: center;
   letter-spacing: 8px;
+  text-shadow: 0 0 3 #333;
 }
 .Ep--music {
   align-items: center;
