--- a/public/css/EpBadge/ep.css
+++ b/public/css/EpBadge/ep.css
@@ -1,25 +1,17 @@
-.Badge--cover {
-  position: absolute;
-  z-index: 1;
-  left: 104px;
-  z-index: 1;
-  top: -12px;
-}
-
 .Badge--cover img {
   width: 471px;
+  box-shadow: 0px 1px 16px 3px rgba(0, 0, 0, 0.75);
+  width: 471px;
+  transition: all ease-in .8s;
   transition: all ease-in .8s;
 }
-.Badge--cover img:hover {
-  filter: invert(100%);
-}
+
 .Badge--background {
-  background: #616161;
-  width: 1032px;
+  background: rgba(97,97,97, .5);
+  width: 100%;
   height: 367px;
-  position: relative;
-  top: 40px;
-  left: 23px;
+  position: absolute;
+
 }
 .Badge--button {
   background: #7CB342;
@@ -29,39 +21,60 @@
   border: none;
   color: #F4F4F4;
   position: absolute;
-  z-index: 0;
-  left: 570px;
-  top: 407px;
+  transform: translateX(-20px);
+  transition: all ease .4s
+}
+.Badge--cover:hover .Badge--button {
+  transform:translateX(0px);
+  box-shadow: 0px 1px 4px black;
 }
 .Badge--songs a {
   text-decoration: none;
   color: #F4F4F4;
   font-size: 24px;
   font-weight: 100;
-  letter-spacing: 6px;
+  letter-spacing: 3px;
+}
+.Badge--songs .animate {
+
+  border-bottom: 4px solid transparent;
+
+  white-space: nowrap;
+
+  width: 0px;
+
+  transition: .5s ease;
+
 }
 .Badge--songs {
   line-height: 2.1;
-  left: 60%;
-  top: 70px;
-  position: absolute;
+  border-left: 20px solid;
+  padding-left: 35px;
 }
-.Badge--songs li {
-  transition: all ease-out .1s;
+
+.Badge--songs .animate:hover{
+  border-bottom: 4px solid grey;
+  width: 100%;
 }
-.Badge--songs li:hover{
-  border-left: 10px solid grey;
-  padding: 10px;
+.Badge--songs li{
+  width: 300px;
 }
+
 .Badge--songs li:active{
   border-left: 10px solid grey;
   transform: rotateY(25deg);
 }
 .Badge--rect {
   width: 95px;
-height: 256px;
-background: #BDBDBD;
-position: absolute;
-left: 49%;
-top: 95px;
+  height: 256px;
+  background: #BDBDBD;
+  position: absolute;
+  left: 33%;
+  top: 95px;
+}
+.Badge--wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 110px auto;
 }
