--- a/public/css/Promo/ep.css
+++ b/public/css/Promo/ep.css
@@ -2,20 +2,22 @@
   display: flex;
   flex-flow: row;
   max-height: 100px;
+  width: 100%;
 }
 .Ep div {
   min-height: 100px;
 }
 .Ep--name {
+  padding-right: 5vw;
   background: rgba(216,216,216, .6);
-  min-width: 483px;
+  width: 100%;
   height: 100%;
   display: flex;
-  color: #616161;
+  color: #eee;
   align-items: center;
   justify-content: center;
   letter-spacing: 8px;
-  text-shadow: 0 0 3 #333;
+  text-shadow: 0px 0px 2px #333;
 }
 .Ep--music {
   align-items: center;
