--- a/public/css/master.css
+++ b/public/css/master.css
@@ -6,14 +6,15 @@
 @import "Gigs/master.css";
 @import "Footer/master.css";
 body, html {
-  background: #121212;
+  box-sizing: border-box;
+  background: #1a1a1a;
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
   color: #F4F4F4;
-  max-width: 1083px;
+  min-width: 1183px;
   margin: 0 auto;
-  border: 4px solid #1a1a1a;
+  border: 2px solid #e0e0e0;
   border-top: none;
   border-bottom: none;
 }
@@ -27,11 +28,10 @@ ul {
   clear: both;
   background: url('../../public/img/ep.png') center center no-repeat;
   background-size: cover;
-  height: 932px;
+  height: 100%;
 }
 .Badge {
-  position: relative;
-  top: 68px;
+
 }
 .Story {
   display: flex;
@@ -47,7 +47,7 @@ ul {
   height: 900px;
   background: url('../../public/img/members.jpg');
   background-size: cover;
-  background-position-y: -320px;
+  background-position-y: -590px;
   display: flex;
   flex-flow: column;
   text-transform: uppercase;
@@ -59,5 +59,8 @@ ul {
   flex-flow: column;
   justify-content: center;
   height: 766px;
-  background: url('../../public/img/gigs.jpg')
+  background: url('../../public/img/gigs.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0px -140px;
 }
