--- a/public/css/master.css
+++ b/public/css/master.css
@@ -26,7 +26,9 @@ ul {
 
 .Promo {
   clear: both;
-  background: url('../../public/img/ep.png') center center no-repeat;
+  background: #283048; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #283048 , #859398); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #283048 , #859398); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background-size: cover;
   height: 100%;
 }
