--- a/public/css/master.css
+++ b/public/css/master.css
@@ -28,7 +28,7 @@ ul {
   clear: both;
   background: #232526; /* fallback for old browsers */
   background: -webkit-linear-gradient(to top, #232526 , #414345); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to top, #232526 , #414345); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to bottom, #232526 , #414345, #bdbdbd);
   background-size: cover;
   height: 100%;
 }
