--- a/public/css/Footer/footer.css
+++ b/public/css/Footer/footer.css
@@ -1,6 +1,10 @@
+footer {
+  height: 100%;
+}
 .Footer {
-  height: 240px;
+  height: 150px;
   background: #D8D8D8;
+
 }
 .Footer  h1 {
   margin: 0;
@@ -17,9 +21,10 @@
   justify-content: center;
   align-items: center;
   flex-flow: row;
+  height: 100%;
 }
 .Footer--socialmedia img {
-  max-width: 100px;
+  max-width: 50px;
   margin: 20px;
 }
 .Footer--socialmedia ul {
