--- a/public/css/Story/story.css
+++ b/public/css/Story/story.css
@@ -2,6 +2,9 @@
 .Story > h1 {
   text-align: center;
   margin-bottom: 80px;
+  text-transform: uppercase;
+  letter-spacing: 8px;
+  text-shadow: 0px 0px 8px black;
 }
 .Story--content {
   font-size: 14px;
