--- a/public/css/Promo/ep.css
+++ b/public/css/Promo/ep.css
@@ -1,46 +1,50 @@
 .Ep {
-  display: flex;
-  flex-flow: row;
-  max-height: 100px;
-  width: 100%;
+    display: flex;
+    flex-flow: row;
+    max-height: 100px;
+    width: 100%;
 }
+
 .Ep div {
-  min-height: 100px;
+    min-height: 100px;
 }
+
 .Ep--name {
-  padding-right: 5vw;
-  background: rgba(216,216,216, .6);
-  width: 100%;
-  height: 100%;
-  display: flex;
-  color: #eee;
-  align-items: center;
-  justify-content: center;
-  letter-spacing: 8px;
-  text-shadow: 0px 0px 2px #333;
+    padding-right: 5vw;
+    background: rgba(216, 216, 216, .6);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    color: #eee;
+    align-items: center;
+    justify-content: center;
+    letter-spacing: 8px;
+    text-shadow: 0px 0px 2px #333;
 }
+
 .Ep--music {
-  align-items: center;
-  justify-content: center;
-  background: #D8D8D8;
-  height: 100%;
-  display: inline-flex;
-  min-width: 548px;
-  margin-left: 25px;
+    align-items: center;
+    justify-content: center;
+    background: #D8D8D8;
+    height: 100%;
+    display: inline-flex;
+    min-width: 548px;
 }
 
 .Ep--music img {
-transition: all ease-out .3s;
-margin: 0;
-max-height: 40px;
-max-width: 220px;
+    transition: all ease-out .3s;
+    margin: 0;
+    max-height: 40px;
+    max-width: 220px;
 }
+
 .Ep--music a img:hover {
-  transform: scale(1.2);
-  filter: sepia(60%);
+    transform: scale(1.2);
+    filter: sepia(60%);
 }
+
 .Ep--music li {
-  align-content: center;
-  display: inline-flex;
-  margin-left: 40px;
+    align-content: center;
+    display: inline-flex;
+    margin-left: 40px;
 }
