--- a/public/css/EpBadge/ep.css
+++ b/public/css/EpBadge/ep.css
@@ -1,75 +1,81 @@
 .Badge--cover img {
-  width: 471px;
-  box-shadow: 0px 1px 16px 3px rgba(0, 0, 0, 0.75);
-  width: 610px;
-  transition: all ease-in .8s;
-  transition: all ease-in .8s;
+    width: 471px;
+    box-shadow: 0px 1px 16px 3px rgba(0, 0, 0, 0.75);
+    width: 610px;
+    transition: all ease-in .8s;
+    transition: all ease-in .8s;
 }
 
 .Badge--background {
-  background: rgba(97,97,97, .5);
-  width: 100%;
-  height: 367px;
-  position: absolute;
-
+    background: rgba(97, 97, 97, .5);
+    width: 100%;
+    height: 367px;
+    position: absolute;
 }
+
 .Badge--button {
-  background: #7CB342;
-  width: 190px;
-  height: 53px;
-  font-size: 24px;
-  border: none;
-  color: #F4F4F4;
-  position: absolute;
+    background: #7CB342;
+    width: 355px;
+    height: 53px;
+    font-size: 24px;
+    border: none;
+    color: #F4F4F4;
+    position: absolute;
 }
 
 .Badge--songs a {
-  text-decoration: none;
-  color: #F4F4F4;
-  font-size: 24px;
-  font-weight: 100;
-  letter-spacing: 3px;
+    text-decoration: none;
+    color: #F4F4F4;
+    font-size: 24px;
+    font-weight: 100;
+    letter-spacing: 3px;
 }
+
 .Badge--songs .animate {
-
-  border-bottom: 4px solid transparent;
-
-  white-space: nowrap;
-
-  width: 0px;
-
-  transition: .5s ease;
-
+    border-bottom: 4px solid transparent;
+    white-space: nowrap;
+    width: 0px;
+    transition: .5s ease;
 }
+
 .Badge--songs {
-  line-height: 2.1;
-  border-left: 20px solid;
-  padding-left: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 2.1;
+    border-left: 20px solid;
+    padding-left: 35px;
+    background: rgba(40, 40, 40, 0.3);
+    height: 610px;
 }
 
-.Badge--songs .animate:hover{
-  border-bottom: 4px solid grey;
-  width: 100%;
-}
-.Badge--songs li{
-  width: 300px;
+.Badge--songs .animate:hover {
+    border-bottom: 4px solid grey;
+    width: 100%;
 }
 
-.Badge--songs li:active{
-  border-left: 10px solid grey;
-  transform: rotateY(25deg);
+.Badge--songs li {
+    width: 300px;
 }
+
+.Badge--songs li:active {
+    border-left: 10px solid grey;
+    transform: rotateY(25deg);
+}
+
 .Badge--rect {
-  width: 95px;
-  height: 256px;
-  background: #BDBDBD;
-  position: absolute;
-  left: 33%;
-  top: 95px;
+    width: 95px;
+    height: 256px;
+    background: #BDBDBD;
+    position: absolute;
+    left: 33%;
+    top: 95px;
 }
+
 .Badge--wrapper {
+    padding: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 110px auto;
+    margin: 61px auto;
 }
